<resources>
    <string name="app_name">Iman_Tulenaliev_hw_2_7</string>
    <string name="plus">+</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="minus">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="times">X</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="ac">AC</string>
    <string name="plus_minus_divided">+/-</string>
    <string name="percent">%</string>
    <string name="divided">/</string>
</resources>