<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/container">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/white"
            android:textSize="80sp"
            android:layout_marginHorizontal="30dp"
            android:layout_gravity="bottom|end"
            android:maxLines="1"
            android:ellipsize="end"

            />
        
        
    </FrameLayout>
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:text="@string/ac"
                android:id="@+id/btn_AC"
                android:onClick="onNumberClick"/>


            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/plus_minus_divided" />

            <com.google.android.material.button.MaterialButton
                style="@style/Gray.Button"
                android:layout_marginEnd="16dp"
                android:text="@string/percent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_divided"
                style="@style/Orange.Button"
                android:text="@string/divided"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_seven"
                style="@style/Dark.Gray.Button"
                android:text="@string/_7"
                android:onClick="onNumberClick"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_eight"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/_8"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_nine"
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="16dp"
                android:text="@string/_9"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_times"
                style="@style/Orange.Button"
                android:text="@string/times"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_four"
                style="@style/Dark.Gray.Button"
                android:text="@string/_4"
                android:onClick="onNumberClick"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_five"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/_5"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_six"
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="16dp"
                android:text="@string/_6"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_minus"
                style="@style/Orange.Button"
                android:text="@string/minus"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_one"
                style="@style/Dark.Gray.Button"
                android:text="@string/_1"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/_2"
                android:id="@+id/btn_two"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_three"
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="16dp"
                android:text="@string/_3"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_plus"
                style="@style/Orange.Button"
                android:text="@string/plus"
                android:onClick="onOperationClick"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_zero"
                style="@style/Dark.Gray.Button"
                android:layout_marginHorizontal="16dp"
                android:text="@string/_0"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:layout_width="176dp"
                android:onClick="onNumberClick"/>

            <com.google.android.material.button.MaterialButton
                style="@style/Dark.Gray.Button"
                android:layout_marginEnd="16dp"
                android:text="@string/dot" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_equal"
                android:onClick="onOperationClick"
                style="@style/Orange.Button"
                android:text="@string/equal" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>